unused images removed and menu fix

--- a/public/frontend/styles/alacle.less
+++ b/public/frontend/styles/alacle.less
@@ -874,6 +874,7 @@ header[role="banner"] {
 			}
 
             ul#main-navigation {
+				display: none;
 				position: absolute;
 				z-index: 9999;
 				top: 49px;
