--- a/public/frontend/styles/alacle.less
+++ b/public/frontend/styles/alacle.less
@@ -47,9 +47,6 @@
 @font-mobile-xlarge : 1.7rem;
 
 
-
-
-
 // Remove default margin spacing
 html, body {
 	margin: 0;
@@ -470,34 +467,6 @@ input[type="radio"] {
 	display: inline;
 }
 
-
-// --------------------------------------------
-// Tables
-
-// Remove most spacing between table cells.
-/*
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-	width: 100%;
-}
-th, td {
-	padding: 1rem 2rem;
-	text-align: left;
-	border-bottom: solid @global-color-grey-light 1px;
-	vertical-align: baseline;
-}
-th:first-child,
-td:first-child {
-	padding-left: 0;
-}
-th:last-child,
-td:last-child {
-	padding-right: 0;
-}
-*/
-
-
 #block-content > table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -559,65 +528,6 @@ td:last-child {
 	}
 }
 
-
-
-/*
-// --------------------------------------------
-// Lists
-ul { list-style: circle; }
-ol { list-style: decimal; }
-ol, ul { padding: 0 0 0 @global-margin; }
-ul ul, ul ol, ol ol, ol ul {
-	margin: 1rem 0 1rem 2rem;
-}
-li { margin: 0 0 .5rem 0; }
-
-dl dt:before {
-	content: '\203A\00a0';
-	color: @global-color-primary;
-}
-dl dd {
-	margin: 0 0 1rem @global-margin;
-}
-
-
-// --------------------------------------------
-// Typography
-
-h1, h2, h3, h4, h5, h6 {
-	font-weight: 300;
-}
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
-
-// Larger than phablet
-@media (min-width: @grid-breakpoint) {
-	h1 { font-size: 5.0rem; }
-	h2 { font-size: 4.2rem; }
-	h3 { font-size: 3.6rem; }
-	h4 { font-size: 3.0rem; }
-	h5 { font-size: 2.4rem; }
-	h6 { font-size: 1.5rem; }
-}
-
-
-// --------------------------------------------
-// Spacing
-button, .button, input, textarea, select, fieldset {
-	margin: 0 0 1rem 0;
-}
-h1, h2, h3, h4, h5, h6, p, pre {
-	margin: 0 0 (@global-margin/2) 0;
-}
-blockquote, figure, table, ul, ol, dl, form {
-	margin: 0 0 @global-margin 0;
-}
-*/
-
 // --------------------------------------------
 // Grid
 .row {
@@ -663,17 +573,8 @@ blockquote, figure, table, ul, ol, dl, form {
 	}
 }
 
-/*
-
 // --------------------------------------------
 // Utilities
-.full-width { width: 100%; }
-.max-full-width { max-width: 100%; }
-.pull-right { float: right; }
-.pull-left { float: left; }
-
-*/
-
 .td-center {
 	vertical-align: middle;
 	text-align: center;
@@ -682,10 +583,6 @@ hr.space {
 	margin: 10px 0;
 	visibility: hidden;
 }
-
-
-
-
 
 
 
@@ -1035,9 +932,6 @@ main[role="main"] {
                 font-weight: 400;
                 text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);
             }
-
-//            @media @desktop { h2 { font-size: @font-large; }}
-//            @media @mobile { h2 { font-size: @font-mobile-large; }}
         }
 
         @media @desktop {
@@ -1107,9 +1001,6 @@ main[role="main"] {
             }
 
             #block-content {
-
-                // padding: 40px;
-
                 p {
                     margin: 0 0 20px 0;
                 }
@@ -1150,19 +1041,41 @@ footer[role="contentinfo"] {
     font-family: 'Merriweather';
     font-size: 1.2rem;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, .2);
-    text-align: center;
     width: 100%;
     max-width: 960px;
-    margin: 30px auto 0 auto;
+    margin: 25px auto 0 auto;
     color: #fff;
-    padding: 25px 0 40px 0;
+    padding: 20px 0 40px 0;
     border-top: dotted rgba(255, 255, 255, .4) 1px;
+	overflow: auto;
+
+	#footer-credits {
+		padding: 0 0 0 10px;
+		p.author {
+			font-family: @font-sans;
+			text-transform: uppercase;
+			font-size: @font-small;
+			font-weight: 300;
+			padding: 3px 0 0 0;
+			color: rgba(255, 255, 255, .65);
+			a {
+				font-weight: 800;
+				color: rgba(255, 255, 255, .65);
+			}
+			a:hover { color: #fff; }
+		}
+	}
+	#footer-share {
+		float: right;
+		width: 100px;
+		height: 70px;
+		padding: 0 10px 0 0;
+		div { float: right; }
+	}
+
 }
 
-
-
-
-
+// --------------------
 // Calendar
 @fc1 : #44B4D0;
 @fc2 : #E12F00;
@@ -1235,26 +1148,4 @@ ul#calendar-legend {
 			font-weight: 400;
 		}
 	}
-/*
-	.fc-toolbar {
-		font-family: 'Merriweather Sans', sans-serif;
-		h2 {
-			border-bottom: none;
-			padding: 0;
-			margin: 0;
-			font-size: 1.6rem;
-			text-transform: uppercase;
-			letter-spacing: 2px;
-		}
-		h2:before {
-			content: none;
-		}
-
-		button.fc-button {
-			font-size: 1.1rem;
-			padding: 0rem 2rem;
-			line-height: 1.1;
-		}
-	}
-*/
 }
