--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -24,14 +24,13 @@
 </head>
 <body>
 
-
+<% var _lang = (current.path[0] == 'fr') ? 'fr_FR' : 'es_ES'; %>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.5&appId=1520023691656888";
-//  js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.5&appId=1520023691656888";
+  js.src = "//connect.facebook.net/<%= _lang %>/sdk.js#xfbml=1&version=v2.5&appId=1520023691656888";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));
 </script>
@@ -127,7 +126,6 @@
             <div id="block-content">
                 <%-yield %>
             </div>
-            <!-- <div id="block-img"><img src="/frontend/images/paris-night-sat-min.jpg" /></div> -->
         </article>
     </section>
 </main>
@@ -165,6 +163,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/lang/es.js"></script>
 <script>(function($) { render_cal(); })(jQuery);</script>
 <% } %>
+<% if (environment == 'production') { %>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-63335-21', 'auto');
+  ga('send', 'pageview');
+</script>
+<% } %>
 </body>
 </html>
