--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Espacio Educativo y Cultural A la clé : Français Langue Etrangère. Academia y Clases de Francés en Zaragoza</title>
-    <meta name="description" content="<%= site_description %>" />
+    <title><% if (current.source == 'index' || current.source == '') { %>Espacio Educativo y Cultural A la clé : Français Langue Etrangère. Academia y Clases de Francés en Zaragoza<% } else { %><%= title %>. A la clé, Academia y Clases de Francés. Zaragoza<% } %></title>
+    <meta name="description" content="<%= title %>. <%= site_description %>" />
     <meta name="keywords" content="<%= site_keywords %>" />
     <meta name="author" content="Jorge Moreno aka Moro. @alterebro" />
     <meta name="HandheldFriendly" content="True" />
@@ -50,7 +50,7 @@
         <nav role="navigation">
 
             <div id="main-navigation-trigger">
-                <a href="#main-navigation"><i class="fa fa-bars"></i> Menu</a>
+                <a href="#main-navigation"><i class="fa fa-fw fa-bars"></i> Menu</a>
             </div>
 
             <% if (current.path[0] == 'fr') { %>
