--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -39,11 +39,11 @@
 <header role="banner">
     <div id="header">
         <div class="hgroup">
-            <h1><a href="<%= (environment == 'production') ? live_url : dev_url %><%= (current.path[0] == 'fr') ? 'fr/' : 'es/' %>"><strong>à la clé.</strong> français langue étrangère</a></h1>
+            <h1><a href="<%= (environment == 'production') ? live_url : dev_url %><%= (current.path[0] == 'fr') ? 'fr/' : 'es/' %>" title="À la clé. Academia y clases de Francés, Zaragoza"><strong>à la clé.</strong> français langue étrangère</a></h1>
             <ul class="fa-ul">
                 <li><i class="fa-li fa fa-map-marker"></i> Av. Tenor Fleta, 53, 50008 Zaragoza, España</li>
                 <li><i class="fa-li fa fa-phone"></i> <strong>876 017 221</strong> / 640 063 726 / 638 016 039</li>
-                <li><i class="fa-li fa fa-envelope-o"></i> <a href="#">alaclefrances@gmail.com</a></li>
+                <li><i class="fa-li fa fa-envelope-o"></i> <a href="mailto:alaclefrances@gmail.com">alaclefrances@gmail.com</a></li>
             </ul>
             <hr />
         </div>
@@ -56,41 +56,41 @@
             <% if (current.path[0] == 'fr') { %>
 
                 <ul id="main-navigation">
-                    <li><a href="fr/">Accueil</a></li>
-                    <li><a href="fr/qui-nous-sommes.html">Qui Nous Sommes?</a></li>
+                    <li><a href="fr/" title="à la clé, français langue étrangère">Accueil</a></li>
+                    <li><a href="fr/qui-nous-sommes.html" title="Qui Nous Sommes?">Qui Nous Sommes?</a></li>
                     <li>
-    					<a href="fr/quoffrons-nous.html">Qu'offrons­-nous? <i class="fa fa-angle-double-down"></i></a>
+    					<a href="fr/quoffrons-nous.html" title="Qu'offrons­-nous?">Qu'offrons­-nous? <i class="fa fa-angle-double-down"></i></a>
     					<ul>
-                            <li><a href="fr/cours-de-francais-au-sein-du-centre.html">Cours de français au sein du Centre</a></li>
-                            <li><a href="fr/cours-de-francais-en-institutions.html">Cours de français en Institutions</a></li>
-    						<li><a href="fr/ateliers.html">Ateliers</a></li>
-    						<li><a href="fr/espace-de-loisirs.html">Espace de loisirs</a></li>
-    						<li><a href="fr/espace-culturel.html">Espace culturel</a></a></li>
+                            <li><a href="fr/cours-de-francais-au-sein-du-centre.html" title="Cours de français au sein du Centre">Cours de français au sein du Centre</a></li>
+                            <li><a href="fr/cours-de-francais-en-institutions.html" title="Cours de français en Institutions">Cours de français en Institutions</a></li>
+    						<li><a href="fr/ateliers.html" title="Ateliers">Ateliers</a></li>
+    						<li><a href="fr/espace-de-loisirs.html" title="Espace de loisirs">Espace de loisirs</a></li>
+    						<li><a href="fr/espace-culturel.html" title="Espace culturel">Espace culturel</a></a></li>
     					</ul>
     				</li>
-    				<li><a href="fr/tarifs.html">Tarifs</a></li>
-    				<li><a href="fr/agenda-et-evenements.html">Agenda et Evénements</a></li>
-    				<li><a href="fr/contact.html">Contact</a></li>
+    				<li><a href="fr/tarifs.html" title="Tarifs">Tarifs</a></li>
+    				<li><a href="fr/agenda-et-evenements.html" title="Agenda et Evénements">Agenda et Evénements</a></li>
+    				<li><a href="fr/contact.html" title="Contact">Contact</a></li>
                 </ul>
 
             <% } else { %>
 
                 <ul id="main-navigation">
-            		<li><a href="es/">Inicio</a></li>
-            		<li><a href="es/quienes-somos.html">¿Quienes Somos?</a></li>
+            		<li><a href="es/" title="À la clé, Academia y clases de Francés. Zaragoza">Inicio</a></li>
+            		<li><a href="es/quienes-somos.html" title="¿Quienes Somos?">¿Quienes Somos?</a></li>
             		<li>
-            			<a href="es/que-ofrecemos.html">¿Qué ofrecemos? <i class="fa fa-angle-double-down"></i></a>
+            			<a href="es/que-ofrecemos.html" title="¿Qué ofrecemos?">¿Qué ofrecemos? <i class="fa fa-angle-double-down"></i></a>
             			<ul>
-                            <li><a href="es/clases-de-frances-en-el-centro.html">Clases de Francés en el Centro</a></li>
-                            <li><a href="es/clases-de-frances-en-instituciones.html">Clases de Francés en Instituciones</a></li>
-            				<li><a href="es/talleres.html">Talleres</a></li>
-            				<li><a href="es/espacio-ocio.html">Espacio Ocio</a></li>
-            				<li><a href="es/espacio-cultural.html">Espacio Cultural</a></a></li>
+                            <li><a href="es/clases-de-frances-en-el-centro.html" title="Clases de Francés en el Centro">Clases de Francés en el Centro</a></li>
+                            <li><a href="es/clases-de-frances-en-instituciones.html" title="Clases de Francés en Instituciones">Clases de Francés en Instituciones</a></li>
+            				<li><a href="es/talleres.html" title="Talleres">Talleres</a></li>
+            				<li><a href="es/espacio-ocio.html" title="Espacio Ocio">Espacio Ocio</a></li>
+            				<li><a href="es/espacio-cultural.html" title="Espacio Cultural">Espacio Cultural</a></a></li>
             			</ul>
             		</li>
-            		<li><a href="es/tarifas.html">Tarifas</a></li>
-            		<li><a href="es/agenda-y-eventos.html">Agenda y Eventos</a></li>
-            		<li><a href="es/contacto.html">Contacto</a></li>
+            		<li><a href="es/tarifas.html" title="Tarifas">Tarifas</a></li>
+            		<li><a href="es/agenda-y-eventos.html" title="Agenda y Eventos">Agenda y Eventos</a></li>
+            		<li><a href="es/contacto.html" title="Contacto">Contacto</a></li>
                 </ul>
 
             <% } %>
