rates page removed out (es + fr)

--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -89,7 +89,7 @@
     						<li><a href="fr/espace-culturel.html" title="Espace culturel">Espace culturel</a></li>
     					</ul>
     				</li>
-    				<li><a href="fr/tarifs.html" title="Tarifs">Tarifs</a></li>
+    				<%# <li><a href="fr/tarifs.html" title="Tarifs">Tarifs</a></li> %>
     				<li><a href="fr/agenda-et-evenements.html" title="Agenda et Evénements">Agenda et Evénements</a></li>
     				<li><a href="fr/contact.html" title="Contact">Contact</a></li>
                 </ul>
@@ -109,7 +109,7 @@
             				<li><a href="es/espacio-cultural.html" title="Espacio Cultural">Espacio Cultural</a></li>
             			</ul>
             		</li>
-            		<li><a href="es/tarifas.html" title="Tarifas">Tarifas</a></li>
+            		<%# <li><a href="es/tarifas.html" title="Tarifas">Tarifas</a></li> %>
             		<li><a href="es/agenda-y-eventos.html" title="Agenda y Eventos">Agenda y Eventos</a></li>
             		<li><a href="es/contacto.html" title="Contacto">Contacto</a></li>
                 </ul>
