--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -13,7 +13,7 @@
     <meta property="og:url" content="<%= (environment == 'production') ? live_url : dev_url %>" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="A la clé Zaragoza. Academia y Clases de Francés en Zaragoza." />
-    <meta property="og:description" content="Espacio Educativo y Cultural A la clé : Français Langue Etrangère. Academia de francés en Zaragoza. Espacio educativo y cultural con talleres, actividades y clases de Francés como lengua extranjera." />
+    <meta property="og:description" content="Aula de Formación de Francés 'A la clé'. Français Langue Etrangère. Academia de francés en Zaragoza. Clases de Francés como lengua extranjera." />
     <meta property="og:image" content="<%= (environment == 'production') ? live_url : dev_url %>brand/frontend/images/alacle-logo-fulltone-primary.png" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="format-detection" content="address=no" />
@@ -24,8 +24,10 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900,300italic,400italic,700italic,900italic" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,300italic,400,400italic,700,700italic,800,800italic" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+	<% if (current.source == 'agenda-y-eventos' || current.source == 'agenda-et-evenements') { %>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/fullcalendar.min.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.3.2/fullcalendar.print.css" media="print" rel="stylesheet" type="text/css" />
+	<% } %>
     <link rel="stylesheet" type="text/css" href="frontend/styles/alacle.css" />
     <%
         var es_lang = '';
@@ -62,9 +64,9 @@
         <div class="hgroup">
             <h1><a href="<%= (environment == 'production') ? live_url : dev_url %><%= (current.path[0] == 'fr') ? 'fr/' : 'es/' %>" title="À la clé. Academia y clases de Francés, Zaragoza"><strong>à la clé.</strong> français langue étrangère</a></h1>
             <ul class="fa-ul">
-                <li><i class="fa-li fa fa-map-marker"></i> Av. Tenor Fleta, 53, 50008 Zaragoza, España</li>
-                <li><i class="fa-li fa fa-phone"></i> <strong>876 017 221</strong> / 640 063 726 / 638 016 039</li>
-                <li><i class="fa-li fa fa-envelope-o"></i> <a href="mailto:alaclefrances@gmail.com">alaclefrances@gmail.com</a></li>
+                <li><i class="fa-li fa fa-map-marker"></i>Av. Compromiso de Caspe nº14, Oficina 11, 50002 Zaragoza, España</li>
+                <li><i class="fa-li fa fa-phone"></i> <strong>640 063 726</strong></li>
+                <li><i class="fa-li fa fa-envelope-o"></i> <a href="mailto:alaclehelene@gmail.com">alaclehelene@gmail.com</a></li>
             </ul>
             <hr />
         </div>
@@ -97,8 +99,22 @@
             <% } else { %>
 
                 <ul id="main-navigation">
-            		<li><a href="es/" title="À la clé, Academia y clases de Francés. Zaragoza">Inicio</a></li>
-            		<li><a href="es/quienes-somos.html" title="¿Quienes Somos?">¿Quienes Somos?</a></li>
+            		<li><a href="es/" title="À la clé: Aula de Formación de Francés. Academia y clases de Francés. Zaragoza">Inicio</a></li>
+					<li><a href="es/acerca-de-mi.html" title="Acerca de mí">Acerca de mí</a></li>
+
+					<li>
+						<a href="es/servicios.html" title="Servicios">Servicios <i class="fa fa-angle-double-down"></i></a>
+						<ul>
+							<li><a href="es/formacion-frances-empresas.html" title="Formación de francés a empresas">Formación de francés a empresas</a></li>
+							<li><a href="es/clases-frances.html" title="Clases individuales o en grupos reducidos">Clases individuales o en grupos reducidos</a></li>
+							<li><a href="es/preparacion-examenes.html" title="Preparación a exámenes">Preparación a exámenes</a></li>
+							<li><a href="es/ensenanza.html" title="Enseñanza con Objetivos Específicos">Enseñanza con Objetivos Específicos</a></li>
+							<li><a href="es/cursos-intensivos.html" title="Cursos intensivos">Cursos intensivos</a></li>
+							<li><a href="es/conversacion.html" title="Conversación">Conversación</a></li>
+            			</ul>
+					</li>
+
+					<%#
             		<li>
             			<a href="es/que-ofrecemos.html" title="¿Qué ofrecemos?">¿Qué ofrecemos? <i class="fa fa-angle-double-down"></i></a>
             			<ul>
@@ -109,18 +125,23 @@
             				<li><a href="es/espacio-cultural.html" title="Espacio Cultural">Espacio Cultural</a></li>
             			</ul>
             		</li>
+					%>
             		<%# <li><a href="es/tarifas.html" title="Tarifas">Tarifas</a></li> %>
-            		<li><a href="es/agenda-y-eventos.html" title="Agenda y Eventos">Agenda y Eventos</a></li>
-            		<li><a href="es/contacto.html" title="Contacto">Contacto</a></li>
+            		<%# <li><a href="es/agenda-y-eventos.html" title="Agenda y Eventos">Agenda y Eventos</a></li> %>
+
+					<li><a href="es/tarifas-y-condiciones.html" title="Tarifas y Condiciones">Tarifas y Condiciones</a></li>
+					<li><a href="es/contacto.html" title="Contacto">Contacto</a></li>
                 </ul>
 
             <% } %>
 
+			<!--
             <ul id="language-switch">
                 <li><a href="es/<%= es_lang %>" id="lang-es" title="Español">ES</a></li>
                 <li><a href="fr/<%= fr_lang %>" id="lang-fr" title="Français">FR</a></li>
             </ul>
-            <hr />
+			-->
+			<hr />
         </nav>
     </div>
 </header>
@@ -153,8 +174,8 @@
     </div>
     <div id="footer-credits">
         <p class="address">
-            <strong><a href="<%= (environment == 'production') ? live_url : dev_url %>" title="Academia de Francés. Zaragoza">A la clé</a>.</strong> Français langue étrangère <span class="copyright">© 2015</span>
-            <span><br />Avenida del Tenor Fleta, n.53,</span> <span>CP 50008 Zaragoza, España.</span>
+            <strong><a href="<%= (environment == 'production') ? live_url : dev_url %>" title="Academia de Francés. Zaragoza">A la clé</a>.</strong> Français langue étrangère <span class="copyright">© 2017</span>
+            <span><br />Av. Compromiso de Caspe, nº14, Oficina 11,</span> <span>CP 50002 Zaragoza, España.</span>
         </p>
         <p class="author">
             Diseño y Desarrollo Web : <a href="http://moro.es" title="Jorge Moreno. UI Designer and Front End Web Developer. Zaragoza, Spain" target="_blank">moro.es</a>
